# mfuzz

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  实现方案.md  实验指南.md
configs/: default.toml  diff_only.toml
docs/: 实现方案.md
docs/materials/: 参考文献出处网址.md  研究方案.md  研究现状.md  研究目标与研究内容.md
docs/phase_1_2/: 实验报告.md
docs/reviews/: 2.1差分行为驱动章节审稿意见.md  2.2中间层关键神经元章节审稿意见.md  2.3融合语义约束章节审稿意见.md  2.4覆盖驱动与语义引导联合优化章节审稿意见.md  修改规划.md  总体方案审稿意见.md  研究方案概念补充清单.md  研究方案章节补充空间审稿意见.md  研究方案终稿整体审稿意见.md  研究目标与研究内容审稿意见.md
scripts/: run_fuzz.py  smoke_test.py  smoke_test_p2.py
src/mfuzz/core/: datasets.py  hooks.py  models.py  types.py
src/mfuzz/differential/: ensemble.py  objective.py
src/mfuzz/engine/: runner.py  seed_pool.py
src/mfuzz/evaluate/: report.py
src/mfuzz/neurons/: coverage.py  objective.py  profiler.py
src/mfuzz/optimize/: operator.py
