[project]
name = "mfuzz"
version = "0.1.0"
description = "Multi-dimensional feedback-driven DNN security testing framework"
requires-python = ">=3.13"
dependencies = [
    "torch==2.12.0.dev20260414+cu132",
    "torchvision==0.27.0.dev20260414+cu132",
    "loguru>=0.7",
    "rich>=13.0",
    "matplotlib>=3.8",
]

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'win32'"]


[dependency-groups]
dev = [
    "pytest>=8.0",
]

[[tool.uv.index]]
name = "pytorch-nightly-cu132"
url = "https://download.pytorch.org/whl/nightly/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly"
explicit = true

override-dependencies = [
    "triton>=0.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch-nightly-cu132" }
torchvision = { index = "pytorch-nightly-cu132" }
triton = { index = "pytorch-nightly" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfuzz"]
